--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,10 +1,12 @@
 spring:
   #autoconfigure:
     #exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+  config:
+    import: "classpath:config.yml"
   datasource:
     url: jdbc:mysql://localhost:3306/spiritualcenter
-    password: tgt.t54y5by#tt
-    username: samadhi
+    password: ${database.password}
+    username: ${database.username}
   jpa:
     database-platform: org.hibernate.dialect.MySQL8InnoDBDialect
     generate-ddl: true
