--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,9 @@
+server:
+  error:
+    path: /user/error
+    whitelabel:
+      enabled: false
+
 spring:
   #autoconfigure:
     #exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
