--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ build/
 
 src/main/resources/config.yml
 src/main/java/be/spiritualcenter/passwords/
+src/main/java/be/spiritualcenter/spiritualcenter.zip
