--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,14 @@ build/
 .vscode/
 
 src/main/resources/config.yml
+src/main/resources/application-dev.yml
+src/main/resources/application-prod.yml
+src/main/resources/application-test.yml
 src/main/java/be/spiritualcenter/spiritualcenter.zip
+
+.env
+.env.dev
+.env.prod
+.env.test
+
+
